# gitramble

./: .gitignore  Justfile  Pipfile  README.md  pyproject.toml
screenshots/: gitramble-1-select-note.md  gitramble-2-filter.md  gitramble-3-github.md  gitramble-4-checkout.md  gitramble-5-change.md  gitramble-6-delete.md
src/gitramble/: app.tcss  app_data.py  branch_screen.py  cli.py  git_utils.py  ui.py  ui.tcss
tests/: test_appdata.py  test_git_utils.py
