[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitramble"
dynamic = ["version"]
description = 'Command-line utility to view a git log and checkout commits.'
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [ "git", "tui" ]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
dependencies = [ "textual" ]

# TODO:
# [project.scripts]
# gitramble = "gitramble.gitramble:main"
#
# [tool.setuptools.dynamic]
# version = {attr = "gitramble.gitramble.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitramble*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
ignore = ["ISC001"]
# extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PLR2004", # magic number
]
